<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:scrollbarSize="0dp"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ad_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ad_1" />

                    <ImageView
                        android:id="@+id/ad_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ad_2" />
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="Москва" />

                    <ImageView
                        android:id="@+id/arrow_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_arrow_down" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_qr_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/category_pizza"
                    android:layout_width="88dp"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:layout_marginStart="16dp"
                    android:text="@string/category_pizza"
                    style="@style/category_enabled"
                    android:layout_marginBottom="16dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/category_combo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    style="@style/category_disabled"
                    android:text="@string/category_combo" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/category_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    style="@style/category_disabled"
                    android:gravity="center"
                    android:outlineProvider="bounds"
                    android:text="@string/category_dessert" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/category_beverages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    style="@style/category_disabled"
                    android:gravity="center"
                    android:text="@string/category_beverages" />
            </LinearLayout>
        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBFBFB"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <FrameLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/ProgressBar"/>

    </FrameLayout>

    <TextView
        android:id="@+id/condition"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/went_wrong"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
